# axum-api

./: .gitignore  Cargo.toml  LICENSE  sample.db
migration/: Cargo.toml
migration/src/: lib.rs  m20231202_074455_create_todos_table.rs
src/: main.rs
src/entities/: prelude.rs
src/entity/: todo.rs
src/errors/: api_error.rs  http_request.rs  mod.rs
src/middleware/: cors.rs  mod.rs  request_id.rs  trace.rs
src/resources/todos/: dto.rs  handler.rs  mod.rs  route.rs
