[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace", "std"] }
axum = "0.7.1"
dotenvy = "0.15.7"
envy = "0.4.2"
http = "1.0.0"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "mock" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace", "request-id"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.6.1"
validator = { version = "0.16.1", features = ["derive"] }
